crates/trestle/tests/snapshots/corpus__primitives_addition.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Int(
                3,
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    151,
                ),
                length: 5,
            },
        },
    ],
}
