crates/trestle/tests/snapshots/corpus__primitives_function_invocation.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Let {
                name: "double",
                value: Expression {
                    kind: Lambda(
                        Lambda {
                            parameter: Some(
                                Param {
                                    name: "x",
                                    type_dec: None,
                                },
                            ),
                            return_type: None,
                            body: Expression {
                                kind: Mul(
                                    Expression {
                                        kind: Var(
                                            "x",
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                164,
                                            ),
                                            length: 1,
                                        },
                                    },
                                    Expression {
                                        kind: Int(
                                            2,
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                168,
                                            ),
                                            length: 1,
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        164,
                                    ),
                                    length: 5,
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            157,
                        ),
                        length: 13,
                    },
                },
            },
            span: SourceSpan {
                offset: SourceOffset(
                    144,
                ),
                length: 26,
            },
        },
        Expression {
            kind: FunctionInvocation(
                "double",
                [
                    Expression {
                        kind: Int(
                            2,
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                177,
                            ),
                            length: 1,
                        },
                    },
                ],
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    170,
                ),
                length: 9,
            },
        },
    ],
}
