crates/trestle/tests/snapshots/corpus__primitives_lambda.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Lambda(
                Lambda {
                    params: [
                        Param {
                            name: "x",
                            type_dec: None,
                        },
                    ],
                    return_type: None,
                    body: Expression {
                        kind: Var(
                            "x",
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                234,
                            ),
                            length: 1,
                        },
                    },
                },
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    227,
                ),
                length: 9,
            },
        },
    ],
}
