crates/trestle/tests/snapshots/corpus__primitives_let_declaration.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    statements: [
        Let {
            name: "x",
            value: Int(
                42,
            ),
        },
    ],
}
