crates/trestle/tests/snapshots/corpus__primitives_multiplication.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Int(
                6,
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    65,
                ),
                length: 5,
            },
        },
    ],
}
