crates/trestle/tests/snapshots/corpus__primitives_typed_lambda.snap
---
source: crates/trestle/tests/corpus.rs
expression: program
---
Program {
    expressions: [
        Expression {
            kind: Lambda(
                Lambda {
                    params: [
                        Param {
                            name: "a",
                            type_dec: Some(
                                Named(
                                    "Int",
                                ),
                            ),
                        },
                        Param {
                            name: "b",
                            type_dec: Some(
                                Named(
                                    "Int",
                                ),
                            ),
                        },
                    ],
                    return_type: Some(
                        Named(
                            "Int",
                        ),
                    ),
                    body: Expression {
                        kind: Add(
                            Expression {
                                kind: Var(
                                    "a",
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        309,
                                    ),
                                    length: 1,
                                },
                            },
                            Expression {
                                kind: Var(
                                    "b",
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        313,
                                    ),
                                    length: 1,
                                },
                            },
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                309,
                            ),
                            length: 5,
                        },
                    },
                },
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    287,
                ),
                length: 28,
            },
        },
    ],
}
